# anotacoes-ufpr

./: comandos_basicos.txt  estrutura_repositorio.txt
analise/: links_estudo.txt
contabilidade/: 11-Exercício+avaliação+Estoque+com+ICMS.doc  CONTABILIDADE.doc  Cópia de exercicio-curitiba-aula.xls  Exercício+Custeio+por+Absorção.doc  Exercício+Custo+II.doc  Exercício+Custo-Caloi.doc  Exercício+Custos+e+o+melhor+mix-Formulação.doc  Exercício+Custos.doc  Exercício+avaliação+de+estoque.doc  Exercício+de+Custo1.doc  Introdução+ao+Custo.doc  Terminologia+Contábil+Básica.doc  exercicio+sobre+custos+1.doc  exercicio+sobre+custos.doc  mat.odt  ~$ercício+Custo+II.doc
discreta/: ScribdViewer.swf
grafos/trabalhos/2009-2/erlf07/1trampo/erlf07-las05/: Makefile  Makefile.in  aclocal.m4  alghandler.c  alghandler.h  algorithms.c  algorithms.h  color.c  color.h  config.h  config.h.in  configure  configure.in  draw.c  draw.h  geometry.c  geometry.h  gr.c  graph.c  graph.h  list.c  pgin.c  plugins.c  plugins.h  rc.c  rc.h  rw.c  rw.h  step.c  step.h
ihc/: 30-03.doc  Thumbs.db  telepar.psd
processamento de imagens/: ApresentacaoPlacas.odp  mat.odt
redes_moveis/: bibliografia.txt
top. em Tecnologia e Aplicaçoes/: 00-A_disciplina.ppt  10-Nocoes_fundamentais.ppt  11-A_compreensao_da_realidade.ppt  12-O_metodo_adotado.ppt  PSDS - 2009 - 20 - A gramática da Linguagem Sistêmica.ppt  PSDS - 2009 - 21 - A gramática da Linguagem Sistêmica - mais enlaces.ppt  PSDS - 2009 - 30 - Eventos - Fatores chaves - Padrôes de comportamento.ppt  PSDS - 2009 - 50 - Arquétipos.ppt  mat.odt  (+7 more)
(+679 files in other folders)
