dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

dnl Default destination
AC_PREFIX_DEFAULT(/usr)

dnl Checks for programs
AC_PROG_CC
AC_PROG_MAKE_SET

dnl GTK
AM_PATH_GTK_2_0(2.0.0, , AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))

dnl Libraries
AC_CHECK_LIB(GL, glClear)
AC_CHECK_LIB(GLU, gluOrtho2D)
AC_CHECK_LIB(gtkgl-2.0,gtk_gl_area_new)
AC_CHECK_LIB(m, sin,, [AC_MSG_ERROR(math library not found)])
AC_CHECK_LIB(dl, dlerror)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(GL/gl.h)
AC_CHECK_HEADERS(GL/glu.h)
dnl AC_CHECK_HEADERS(gtkgl-2.0/gtkgl/gtkglarea.h)
AC_PATH_GTKGL
AC_CHECK_HEADERS(dlfcn.h)

dnl Output
AC_CONFIG_HEADER(config.h)
AC_OUTPUT([Makefile])
MAKE_GTK_DEPS
